# advent-of-code-py-2025

./: .gitignore  README.md  aoclib.py  justfile  main.py  pyproject.toml
